discussion/kv_engine/181770/181770_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[BP] MB-53586: Fix error path for get_scope_id

cherry-picks: 2592bd6f2

For unknown collection get_scope_id was returning an incorrectly
initialised EngineErrorGetScopeIDResult meaning the manifest-UID
used for lookup was not included (default of 0 was returned to
client). This commit could be back-ported if required.

Note that the changes to cb::EngineErrorGetScopeIDResult are
to be cleaned up in a subsequent change where get_scope_id(cid) is
replaced by a broader get_collection_meta function.

The updated test_app case highlighted that the usage of get_scope_id
occurred before the incoming key data had been validated by
is_document_key_valid, this is now addressed by incorporating
is_document_key_valid into verify_header

Change-Id: Ic16bf4aaeec1532f2b900eefe4c5090e0a404e8a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-25 10:40:07.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-10-25 10:40:20.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/321491/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-25 10:49:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/382/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1603:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2180:66: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                                        PROTOCOL_BINARY_RAW_BYTES);
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:121:1: note: "verify_header" declared here
Status McbpValidator::verify_header(Cookie& cookie,
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2189:66: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                                        PROTOCOL_BINARY_RAW_BYTES);
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:121:1: note: "verify_header" declared here
Status McbpValidator::verify_header(Cookie& cookie,
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58: error: use of undeclared identifier "cid" [clang-diagnostic-error]
    auto scopeIdInfo = engine->getKVBucket()->getScopeID(cid);
                                                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/382/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/382/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/519/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/ep_engine.cc(1778): error C2065: "cid": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/519/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/372/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: use of undeclared identifier "cid"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/372/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/407/ : FAILURE

Compile error at [2022-10-25T10:43:26.465Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: ?cid? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/407/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/397/ : FAILURE

Compile error at [2022-10-25T10:45:02.813Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: use of undeclared identifier "cid"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/397/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/402/ : FAILURE

Compile error at [2022-10-25T10:43:15.143Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: use of undeclared identifier "cid"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/402/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/384/ : FAILURE

Compile error at [2022-10-25T10:44:27.720Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: use of undeclared identifier "cid"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/384/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/397/ : FAILURE

Compile error at [2022-10-25T10:47:55.527Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: ?cid? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/397/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/383/ : FAILURE

Compile error at [2022-10-25T10:48:09.541Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: ?cid? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/383/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/616/ : FAILURE

Compile error at [2022-10-25T10:43:31.011Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/ep_engine.cc:1778:58:
error: use of undeclared identifier "cid"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/616/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20691/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-10-25 16:06:43.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
